--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "material-icons": "^0.3.1",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
+    "vuesax": "^3.11.10",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
